# tg-bot-for-open_wrt

./: Cargo.toml  Makefile
src/: main.rs
src/bot/: auth.rs  commands.rs  factory.rs  handlers.rs  messages.rs  mod.rs
src/bot/formatters/: clients.rs  mod.rs  status.rs  utils.rs  wifi.rs
src/bot/telegram/: middleware.rs  mod.rs
src/core/: app.rs
src/domain/: error.rs  messenger.rs  mod.rs  router.rs  signal.rs  types.rs  ubus.rs  wifi_mode.rs
src/infrastructure/: config.rs  fs.rs  logging.rs  mod.rs  signal.rs
src/infrastructure/router/: mod.rs  openwrt.rs
