[package]
name = "tb-router"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process", "signal"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }


[profile.release]
opt-level = "z"     
lto = true          
codegen-units = 1   
panic = "abort"    
strip = true        
